# PluginMinecraft

./: .gitmodules  CMakeLists.txt  log.txt
.github/workflows/: build.yml
PluginMinecraft/: gui.cpp  gui.h  hook.cpp  main.cpp
PluginMinecraft/Gui/: explorer.cpp  explorer.h  gui.cpp  gui.h
